# datashare-extension-neo4j

./: .dockerignore  .gitignore  Dockerfile  README-dev.md  README.md  docker-compose.yml  neo4j  package-lock.json  package.json  pom.xml  version
.circleci/: config.yml
.circleci/setup/: darwin  unknown-linux
.data/: .gitignore  datashare.properties  datashare.properties.template
.data/neo4j/: .gitignore
.github/: CODEOWNERS
.github/workflows/: codeql.yml
icij-common/: pyproject.toml
icij-common/icij_common/: logging_utils.py  pydantic_utils.py  test_utils.py
icij-common/icij_common/neo4j/: migrate.py  projects.py  test_utils.py
icij-common/icij_common/tests/: conftest.py
icij-common/icij_common/tests/neo4j/: test_migrate.py
icij-worker/: pyproject.toml
icij-worker/icij_worker/: __init__.py  __main__.py  app.py  task.py  typing_.py
icij-worker/icij_worker/backend/: backend.py  mp.py
icij-worker/icij_worker/cli/: __init__.py  workers.py
icij-worker/icij_worker/event_publisher/: __init__.py  event_publisher.py  neo4j.py
icij-worker/icij_worker/task_manager/: __init__.py  neo4j.py
icij-worker/icij_worker/tests/: conftest.py  test_task.py
icij-worker/icij_worker/tests/cli/: conftest.py  test_cli.py  test_workers.py
icij-worker/icij_worker/tests/task_manager/: test_neo4j.py
icij-worker/icij_worker/tests/utils/: test_registerable.py
icij-worker/icij_worker/tests/worker/: conftest.py  test_config.py  test_neo4j.py  test_process.py  test_worker.py
icij-worker/icij_worker/tests/worker/event_publisher/: test_neo4j.py
icij-worker/icij_worker/utils/: __init__.py  dependencies.py  from_config.py  imports.py  logging_.py  progress.py  registrable.py  tests.py
icij-worker/icij_worker/worker/: neo4j.py  process.py  worker.py
moved/icij-common/: linting_test.py
moved/icij-worker/: linting_test.py
neo4j-app/: linting_test.py  pyproject.toml  run.spec  worker_config.json
neo4j-app/neo4j_app/: __init__.py  config.py  constants.py  typing_.py
neo4j-app/neo4j_app/app/: __init__.py  admin.py  config.py  dependencies.py  doc.py  documents.py  graphs.py  main.py  named_entities.py  projects.py  tasks.py  utils.py
neo4j-app/neo4j_app/core/: __init__.py  config.py  documents.py  imports.py  named_entities.py  objects.py
neo4j-app/neo4j_app/core/elasticsearch/: __init__.py  client.py  documents.py  to_neo4j.py  utils.py
neo4j-app/neo4j_app/core/neo4j/: __init__.py  documents.py  dumps.py  graphs.py  imports.py  migrations.py  named_entities.py  projects.py  schema.py  utils.py
neo4j-app/neo4j_app/core/neo4j/migrations/: __init__.py  migrate.py  migrations.py
neo4j-app/neo4j_app/core/utils/: __init__.py  asyncio.py  concurrent.py  logging.py  progress.py  pydantic.py
neo4j-app/neo4j_app/icij_worker/: __init__.py  __main__.py  app.py  config.py  consumer.py  exceptions.py  publisher.py  task.py  typing.py  utils.py  worker.py
neo4j-app/neo4j_app/icij_worker/backend/: backend.py  mp.py
neo4j-app/neo4j_app/icij_worker/cli/: __init__.py  workers.py
neo4j-app/neo4j_app/icij_worker/event_publisher/: event_publisher.py  neo4j.py
neo4j-app/neo4j_app/icij_worker/task_manager/: neo4j.py
neo4j-app/neo4j_app/icij_worker/task_store/: __init__.py  neo4j.py
neo4j-app/neo4j_app/icij_worker/utils/: dependencies.py  from_config.py  registrable.py
neo4j-app/neo4j_app/icij_worker/worker/: __init__.py  config.py  neo4j.py  process.py  worker.py
neo4j-app/neo4j_app/ml/: clustering_viz.ipynb  doc_level_clustering_viz.ipynb  doc_level_dedupe.ipynb  graph_dedupe.py  graph_level_clustering_viz.ipynb  graph_level_dedupe.ipynb  utils.py
neo4j-app/neo4j_app/run/: config.py  run.py  utils.py
neo4j-app/neo4j_app/scripts/: bulk-import.sh
neo4j-app/neo4j_app/tasks/: __init__.py  app.py  dependencies.py  import.py  imports.py
neo4j-app/neo4j_app/tests/: conftest.py
neo4j-app/neo4j_app/tests/app/: test_admin.py  test_config.py  test_dependencies.py  test_documents.py  test_dumps.py  test_graphs.py  test_main.py  test_named_entities.py  test_projects.py  test_tasks.py  test_utils.py
neo4j-app/neo4j_app/tests/core/: test_config.py  test_documents.py  test_imports.py  test_named_entities.py
neo4j-app/neo4j_app/tests/core/elasticsearch/: test_client.py  test_to_neo4j.py  test_utils.py
neo4j-app/neo4j_app/tests/core/neo4j/: test_documents.py  test_dumps.py  test_graphs.py  test_imports.py  test_migrations.py  test_name_entities.py  test_projects.py  test_schema.py  test_utils.py
neo4j-app/neo4j_app/tests/core/neo4j/migrations/: test_migrate.py  test_migrations.py
neo4j-app/neo4j_app/tests/core/utils/: test_asyncio.py  test_progress.py
neo4j-app/neo4j_app/tests/icij_worker/: conftest.py  consumer_main.py  test_app.py  test_consumer.py  test_publisher.py  test_task.py  test_utils.py  test_worker.py
neo4j-app/neo4j_app/tests/icij_worker/cli/: test_cli.py  test_workers.py
neo4j-app/neo4j_app/tests/icij_worker/store/: test_neo4j.py
neo4j-app/neo4j_app/tests/icij_worker/task_manager/: test_neo4j.py
neo4j-app/neo4j_app/tests/icij_worker/utils/: test_registerable.py
neo4j-app/neo4j_app/tests/icij_worker/worker/: conftest.py  test_config.py  test_neo4j.py  test_process.py  test_worker.py  worker_main.py
neo4j-app/neo4j_app/tests/icij_worker/worker/event_publisher/: test_neo4j.py
neo4j-app/neo4j_app/tests/run/: test_run.py
neo4j-app/neo4j_app/tests/utils/: test_asyncio.py
neo4j-app/neo4j_app/utils/: pydantic.py
neo4j-app/qa/: pylintrc
plugins/neo4j-dump-widget/: .gitignore  README.md  circle.yml  main.js  package.json
plugins/neo4j-graph-widget/: README.md  eslint.config.js  main.js  (+3 more)
qa/: pylintrc
scripts/: neo4j_healthcheck  update_versions.py
(+115 files in other folders)
