[tool.poetry]
name = "neo4j_app"
version = "0.2.4"
description = "neo4j backend for the Datashare extension"
authors = ["ICIJ <engineering@icij.org>"]
# TODO: add readme
packages = [
    { include = "neo4j_app" }
]
exclude = ["neo4j_app/tests"]

[tool.black]
line-length = 88
target = "py38"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.99.1"
pyyaml = ">=5.4.0" # For security
uvicorn = { version = "^0.20.0", extras = ["standard"] }
elasticsearch = {version = "<7.14", extras = ["async"]}
neo4j = "^5.5.0"
setuptools = "^67.6.1"
datrie = "^0.8.2"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
fastapi = { version = "^0.99.1", extras = ["all"] }
pylint = "^2.15.10"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
tomli = { version = "^2.0.1", markers = 'python_version < "3.11"' }

[tool.poetry.group.opensearch.dependencies]
opensearch-py = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
