[tool.poetry]
name = "neo4j_app"
version = "0.4.2"
description = "neo4j backend for the Datashare extension"
authors = [
    "Clément Doumouro <cdoumouro@icij.org>",
    "ICIJ <engineering@icij.org>",
]
# TODO: add readme
packages = [ { include = "neo4j_app" } ]
exclude = ["neo4j_app/tests"]

[tool.black]
line-length = 88
target-version = ["py39"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "pull",
]

[tool.poetry.dependencies]
python = "^3.9"

aiostream = "^0.5.1"
datrie = "^0.8.2"
elasticsearch = { version = "^7.13", extras = ["async"] }
fastapi = "^0.99.1"
gunicorn = "^21.2.0"
icij_worker = { path = "../icij-worker", develop = true, extras = ["neo4j"] }
icij_common = { path = "../icij-common", develop = true, extras = ["neo4j"] }
neo4j = "^5.5.0"
pydantic = "^1.10.13"
python-json-logger = "^2.0.7"
pyinstaller-hooks-contrib = "^2023.12"
pyyaml = ">=5.4.0" # For security
setuptools = "^67.6.1"
tenacity = "^8.2.3"
uvicorn = { version = "^0.23.2", extras = ["standard"] }


[tool.poetry.group.dev.dependencies]
fastapi = { version = "^0.99.1", extras = ["all"] }
icij_worker = { path = "../icij-worker", develop = true, extras = ["dev"] }
icij_common = { path = "../icij-common", develop = true, extras = ["dev"] }
pylint = "^2.15.10"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
tomli = { version = "^2.0.1", markers = 'python_version < "3.11"' }

[tool.poetry.group.opensearch.dependencies]
opensearch-py = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
